# FedAdaptiveDefense

./: README.md  docker-compose.yml  main.py  pyproject.toml  results.py
baseline/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
docker/client/: Dockerfile  entrypoint.sh
docker/server/: Dockerfile  entrypoint.sh
